--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.7.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>deres12.springframework.projectexample</groupId>
+	<groupId>deres12.springframework</groupId>
 	<artifactId>projectexample</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>projectexample</name>
+	<name>project-example</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
